Fix: Main media buttons were overlapping the plot info in episode pages #169

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -1094,7 +1094,8 @@ html {
 }
 
 .layout-desktop .detailRibbon {
-    height: 30vh;
+    height: 100%;
+    min-height: 30vh;
     margin-top: unset;
 }
 
